# HELIX

./: .releaserc.json  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeartifact.yml
helix/: README.md  admin.py  helix_upload_sample.csv  helix_utils.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
helix/Static/Seed/: style.css
helix/fixtures/: doe_org.json  greenassessments.json
helix/migrations/: 0001_initial.py  0002_auto_20200424_1259.py  0002_helixorganization.py  0003_helixgreenassessmentproperty_reference_id.py  0004_helixgreenassessment.py  0005_auto_20180605_0803.py  0006_auto_20180823_0029.py  0007_helixtermsofservice.py  0008_helixpropertymeasure.py  0009_auto_20181222_0657.py  0010_auto_20190107_0815.py  0011_helixpropertymeasure_reference_id.py  0012_auto_20190207_0507.py  0013_helixpropertymeasure_source.py  0014_auto_20190526_0456.py
helix/serializers/: certification.py  properties.py.tmp
helix/static/helix/controllers/: green_assessments_controller.js
helix/static/helix/partials/: green_assessments.html
helix/static/seed/css/: style_mod.css
helix/static/seed/js/: seed.js
helix/static/seed/partials/: about.html  (+24 more)
helix/templates/: reso_export_list_template.xml  reso_export_template.xml
helix/templates/helix/: assessment_edit.html  green_assessments.html  index.html
helix/templates/seed/: _header.html  _sidebar.html  account_create_email.html  base.html
helix/tests/: test_utils.py  test_views.py
helix/utils/: address.py  constants.py
helix/utils/seed/: constants.py
(+5 files in other folders)
